--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -37,35 +37,78 @@
     <h1>Privacy Policy</h1>
     <p class="last-updated">Last Updated: January 31, 2026</p>
 
-    <p>Pulse Tap ("we", "our", or "us") provides this Privacy Policy to explain how we collect, use, and protect your
-        information when you use our mobile application.</p>
+    <p>
+        Pulse Tap ("we", "our", or "us") respects your privacy. This Privacy Policy explains how we collect, use,
+        and protect information when you use the Pulse Tap mobile application. This app is designed for users of
+        all age groups.
+    </p>
 
     <h2>1. Information We Collect</h2>
-    <p><strong>Authentication:</strong> If you sign in with Google, we collect your basic profile information (name,
-        email, and profile picture) to sync your game progress across devices.</p>
-    <p><strong>Game Data:</strong> We store your high scores, levels, XP, and unlocked themes on our servers (Firebase)
-        to provide leaderboard functionality.</p>
-    <p><strong>Device Information:</strong> We may collect basic device info (OS version) to help troubleshoot technical
-        issues.</p>
 
-    <h2>2. Third-Party Services</h2>
-    <p>We use the following third-party services:</p>
+    <p><strong>Account & Authentication Information:</strong><br>
+        If you choose to sign in using Google, we may collect basic profile details such as your name, email address,
+        and profile picture. This helps us save your progress and allow you to continue playing across multiple devices.
+    </p>
+
+    <p><strong>Game Progress Data:</strong><br>
+        We store game-related information such as scores, levels, experience points (XP), achievements,
+        and unlocked themes. This data is used to provide features like leaderboards and progress tracking.
+    </p>
+
+    <p><strong>Device & Technical Information:</strong><br>
+        We may collect limited technical information such as device type, operating system version,
+        and app performance data to improve stability and fix bugs.
+    </p>
+
+    <h2>2. How We Use Your Information</h2>
     <ul>
-        <li><strong>Google Firebase:</strong> For authentication and database (Leaderboards).</li>
-        <li><strong>Google AdMob:</strong> To display advertisements. AdMob may collect device identifiers to serve
-            personalized or non-personalized ads.</li>
+        <li>To provide and maintain game functionality</li>
+        <li>To sync game progress across devices</li>
+        <li>To display leaderboards and in-game rankings</li>
+        <li>To improve performance, security, and user experience</li>
+        <li>To display ads in a responsible manner</li>
     </ul>
 
-    <h2>3. Data Deletion</h2>
-    <p>Users can request data deletion by contacting us through our support channels. Deleting your account will remove
-        your profile and scores from our global leaderboard.</p>
+    <h2>3. Third-Party Services</h2>
+    <p>Pulse Tap uses trusted third-party services that may collect information as part of their functionality:</p>
+    <ul>
+        <li><strong>Google Firebase:</strong> Used for authentication, cloud storage, and leaderboard data.</li>
+        <li><strong>Google AdMob:</strong> Used to show advertisements. Ads may be personalized or
+            non-personalized depending on user settings, age, and region.</li>
+    </ul>
 
-    <h2>4. Children's Privacy</h2>
-    <p>Pulse Tap is designed for a general audience. We do not knowingly collect personal information from children
-        under 13.</p>
+    <h2>4. Children & Family-Friendly Use</h2>
+    <p>
+        Pulse Tap is suitable for users of all ages. We do not knowingly collect personal information
+        from children under the age of 13 without appropriate safeguards. If you believe that a child has
+        provided personal data unintentionally, please contact us so we can remove it.
+    </p>
 
-    <h2>5. Contact Us</h2>
-    <p>If you have questions about this policy, please contact us at diyorajenil23@gmail.com.</p>
+    <h2>5. Data Security</h2>
+    <p>
+        We take reasonable steps to protect your data using industry-standard security practices.
+        However, no method of electronic storage or transmission is 100% secure.
+    </p>
+
+    <h2>6. Data Deletion & User Rights</h2>
+    <p>
+        You may request deletion of your account and associated data at any time.
+        Once deleted, your profile and game progress will be permanently removed from our servers,
+        including leaderboard records.
+    </p>
+
+    <h2>7. Changes to This Policy</h2>
+    <p>
+        We may update this Privacy Policy from time to time. Any changes will be reflected on this page,
+        along with an updated revision date.
+    </p>
+
+    <h2>8. Contact Us</h2>
+    <p>
+        If you have any questions, concerns, or requests related to this Privacy Policy,
+        please contact us at:
+        <br><strong>diyorajenil23@gmail.com</strong>
+    </p>
 </body>
 
 </html>
